# app/Component/Ad/Infrastructure/Http/Handler/ListAdBuyHandler.php
@@ -33,14 +33,39 @@ use OpenApi\Attributes as OA;
 
     ],
     responses: [
-        new OA\Response(response: 200, description: 'Success', content: new OA\JsonContent(
-            properties: [
-                new OA\Property(property: 'status', type: 'string'),
-                new OA\Property(property: 'message', type: 'string'),
-                new OA\Property(property: 'data', ref: '#/components/schemas/AdBuyViewListModel'),
-            ],
-            type: 'object'
-        )),
+        new OA\Response(
+            response: 200,
+            description: 'Success',
+            content: new OA\JsonContent(
+                properties: [
+                    new OA\Property(property: 'status', type: 'string'),
+                    new OA\Property(property: 'message', type: 'string'),
+                    new OA\Property(
+                        property: 'data',
+                        properties: [
+                            new OA\Property(
+                                property: 'items',
+                                type: 'array',
+                                items: new OA\Items(ref: '#/components/schemas/AdBuyViewListModel')
+                            ),
+                            new OA\Property(
+                                property: 'meta',
+                                properties: [
+                                    new OA\Property(property: 'current_page', type: 'integer'),
+                                    new OA\Property(property: 'per_page', type: 'integer'),
+                                    new OA\Property(property: 'total', type: 'integer'),
+                                    new OA\Property(property: 'last_page', type: 'integer'),
+                                ],
+                                type: 'object'
+                            ),
+                        ],
+                        type: 'object'
+                    ),
+                ],
+                type: 'object'
+            )
+        ),
+
         new OA\Response(response: 400, description: 'error', content: new OA\JsonContent(
             properties: [
                 new OA\Property(property: 'status', type: 'string'),
@@ -72,7 +97,7 @@ class ListAdBuyHandler extends Handler
             $items = $this->adMapper->toViewBuyLiseModelCollection($paginated->items());
             return  responseApi(
                 data: [
-                    'data' => $items,
+                    'items' => $items,
                     'meta' => [
                         'current_page' => $paginated->currentPage(),
                         'per_page'     => $paginated->perPage(),
