# app/Component/Ad/Infrastructure/Http/Handler/ShowAdHandler.php
@@ -1,0 +1,77 @@
+<?php
+
+namespace App\Component\Ad\Infrastructure\Http\Handler;
+
+use App\Component\Ad\Application\Mapper\AdMapperInterface;
+use App\Component\Ad\Application\Service\AdServiceInterface;
+use App\Component\Ad\Domain\Enum\MainType;
+use App\Component\Ad\Presentation\ViewModel\AdViewListModel;
+use App\Libraries\Base\Http\Handler;
+use Illuminate\Http\JsonResponse;
+use Illuminate\Http\Request;
+use Illuminate\Pagination\LengthAwarePaginator;
+use Illuminate\Support\Facades\Auth;
+use Illuminate\Support\Facades\Cache;
+use Illuminate\Support\Facades\DB;
+use OpenApi\Attributes as OA;
+
+#[OA\Get(
+    path: '/api/v1/ads/show/sell/{slug}',
+    operationId: "ShowAdDetails",
+    summary: "Show Ad Details",
+    security: [['optional' => []]],
+    tags: ['Ads'],
+    responses: [
+        new OA\Response(response: 200, description: 'Success', content: new OA\JsonContent(
+            properties: [
+                new OA\Property(property: 'status', type: 'string'),
+                new OA\Property(property: 'message', type: 'string'),
+                new OA\Property(property: 'data', ref: '#/components/schemas/AdViewModel'),
+            ],
+            type: 'object'
+        )),
+        new OA\Response(response: 400, description: 'error', content: new OA\JsonContent(
+            properties: [
+                new OA\Property(property: 'status', type: 'string'),
+                new OA\Property(property: 'message', type: 'string'),
+            ],
+            type: 'object'
+        )),
+    ]
+)]
+class ShowAdHandler extends Handler
+{
+    protected AdServiceInterface $adService;
+
+    protected AdMapperInterface $adMapper;
+
+    public function __construct(AdServiceInterface $adService, AdMapperInterface $adMapper)
+    {
+        $this->adService = $adService;
+        $this->adMapper = $adMapper;
+    }
+
+    public function __invoke($slug): JsonResponse
+    {
+        try {
+
+            $ad = $this->adService->findBySlug($slug);
+            $ad = $this->adMapper->toViewModel($ad);
+
+            return  responseApi($ad);
+        } catch (\Exception $e) {
+            \Log::error('Error in List Sell Ad Handler', [
+                'error'     => $e->getMessage(),
+                'file'      => $e->getFile(),
+                'line'      => $e->getLine(),
+                'code'      => $e->getCode(),
+                'user_id'   => optional(Auth::user())->id
+            ]);
+            return responseApiFalse(
+                400,
+                translate('An unexpected error occurred while processing your request. Please try again. If the problem persists, contact our support team for assistance.')
+            );
+        }
+    }
+
+}
